[tool.poetry]
name = "tech-for-good-education-team"
version = "0.1.0"
description = "Experiment repo for tech for good education team"
authors = ["Yu-Cheng Tsai <yucheng.tsai@sgae.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
openai = "0.28.1"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
unzip = "^1.0.0"
openpyxl = "^3.1.3"
networkx = "^3.3"
streamlit = "^1.35.0"
streamlit-extras = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
